--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "vite-vue2-simple-starter",
   "version": "0.0.1",
   "scripts": {
-    "serve": "vite",
-    "serve:dev": "vite --mode development",
-    "serve:prod": "vite --mode production",
+    "dev": "vite --mode development",
+    "prod": "vite --mode production",
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "build:prod": "vite build --mode production"
